security-configs-fix-and-refactor